@@ -2,49 +2,63 @@
 
 整(chao)理(shu)一些读书笔记
 
-## CSS
+## CSS权威指南
 
-*css部分参考 ： [css参考手册](http://css.doyoe.com/)*
-
-- [CSS权威指南](CSS.The.Definitive.Guide.xmind)
+[链接](CSS.The.Definitive.Guide.xmind)
 
 进度：50%
 
 全书比较偏重细节，初学者很容易读到一半，就读不下去了（PS：没错，就是我）
 
-- CSS揭秘
+## CSS揭秘
 
 进度：0%
 
 全书偏重各种页面美化实例和一些特效的制作
 
-- [CSS设计指南](CSS设计指南.xmind)
+## CSS设计指南
+
+[链接](CSS设计指南.xmind)
 
 进度：80%
 
 这本书适合初学者，由浅入深的讲了布局的基础知识，书中关于几种常见布局的总结堪称经典
 
+*参考 ： [css参考手册](http://css.doyoe.com/)*
+
 ## 数据库设计
 
-- [Data Model Resource Book](DataModelDesigin.xmind)
+[Data Model Resource Book](DataModelDesigin.xmind)
 
 介绍行业内主要的数据库建模模板，内容全面扎实，可扩充自己的视野
 
+## java虚拟机并发编程
 
-*两种jc配置:*
+从编程模型的角度解决并发问题，以共享可变性、隔离可变性、不可变性为基础，介绍了，锁模型，STM，Actor三种常见的并发编程模型
 
-1. cms+parnew
+##Java NIO
 
--Djava.awt.headless=true
--Xmx1g
--Xss2048k
--XX:+UseParNewGC
--XX:+UseConcMarkSweepGC  
--XX:CMSInitiatingOccupancyFraction=75
--XX:+UseCMSInitiatingOccupancyOnly
--XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=/opt/logstash/heapdump.hprof
+简单介绍javaNIO的API，核心的三个概念Selector，Channel，Buffer
 
-2. g1
+## netty权威指南
 
--server -Xms512m -Xmx2g -Xss256k -XX:+UseG1GC -XX:OnOutOfMemoryError=kill -9 %p
+从UNIX的IO模型，到java的IO模型演化，开篇对基础讲解很透彻。
+
+之后探讨了TCP粘包和拆包的问题，并说明了netty对此抽象出的实现。
+
+后面还有大半本源码解析，供深入研究的同学仔细研读。
+
+## 深入理解java虚拟机
+
+对java虚拟机进行了全面的讲解，知识多且杂。
+
+前几章讲内存管理，gc的实现，几种经典的gc算法和实际中常用的gc策略，对于堆外内存的整理机制页做了说明。
+
+后几章有空翻翻。
+
+## 领域驱动设计
+
+软件分层，分模块，依据抽象出的领域模型，精准的开发产品。
+
+
+
